# kalibracja_kinect

./: .gitignore  CMakeLists.txt  Changelog  LICENSE  Project1.sln  README.md  changelog.md
Project1/: Project1.vcxproj  kalibracja_kamera  kalibracja_kinect  kalibracja_stereo  main.cpp  temp
Project1/Zdjecia/Depth/: img1.xml  img10.xml  img11.xml  img12.xml  img13.xml  img14.xml  img15.xml  img16.xml  img17.xml  img18.xml  img19.xml  img2.xml  img20.xml  img21.xml  img22.xml  img23.xml  img24.xml  img25.xml  img26.xml  img27.xml  img28.xml  img29.xml  img3.xml  img30.xml  img4.xml  img5.xml  img6.xml  img7.xml  img8.xml  img9.xml
